[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Sami Tahri <sismixx@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.1"
typing-extensions = "^4.4.0"
sortedcontainers = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ruff = "^0.0.239"
pytest-cov = "^4.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
