[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Sami Tahri <sismixx@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
