[tool.poetry]
name = "tree"
version = "0.1.0"
description = ""
authors = ["Sami Tahri <sismixx@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
typing-extensions = "^4.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.239"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
